# tanmatsu-neiro

./: .clang-format  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Makefile  README.md
app/: app.c  app.h
control/: keyboard.c  keyboard.h  midi_in.c  midi_in.h  midi_router.c  midi_router.h  sustain.c  sustain.h  wav_recorder.cpp  wav_recorder.h
dsp/: dcblock.h  env.h  filter.h  juno106_hpf.cpp  juno106_hpf.h  lfo.h  limiter.h  osc.h  saturate.h
engine/: arp.h  arp_clock.h  bank_json.cpp  bank_json.h  bench.c  bench.h  bench_blocks.cpp  clock.h  command_queue.h  factory_bank.h  factory_bank_embed.cpp.in  juno_model.cpp  juno_model.h  juno_voice.cpp  juno_voice.h  mod_matrix.cpp  mod_matrix.h  param_desc.cpp  param_desc.h  param_id.h  param_store.cpp  param_store.h  preset.cpp  preset.h  record_ring.cpp  record_ring.h  scheduler.h  spsc_ring.h  synth.c  synth.cpp  synth.h  synth_config.h  synth_model.h  user_bank.cpp  user_bank.h  voice.h  voice_alloc.cpp  voice_alloc.h
engine/banks/: neiro_factory.json
host/: CMakeLists.txt
host/compat/: endian.h  malloc.h
main/: CMakeLists.txt  factory_bank_embed.cpp  idf_component.yml  linker_audio.lf  main.c
platform/: audio_volume.c  audio_volume.h  platform.h
platform/device/: midi_usb_device.c  midi_usb_device.h  midi_usb_host.c  midi_usb_host.h  platform_device.c  sd_profile.c  sd_profile.h
platform/host/: midi_host.cpp  miniaudio_impl.c  platform_host.c
presets/: user.tnp
sdkconfigs/: general  tanmatsu
specs/: 00-overview.md  01-hardware.md  02-synth-architecture.md  03-control-ui.md  04-platform-and-simulator.md  05-data-model.md  06-feature-scope-and-roadmap.md  07-upstream-contributions.md  08-embedded-practices.md  09-build-and-run.md  FABLE-THOUGHTS.md  MAP.md  MEMORY-archive.md  MEMORY.md
specs/decisions/: 0001-virtual-analog-target.md  0002-juno106-hybrid-voice.md  0003-polyphony-8-unison.md  0004-permissive-licensing.md  0005-midi-usb-host-first.md  0006-v1-no-physical-controls.md  0007-host-first-platform-hal.md  0008-engine-model-boundary.md  0009-modulation-matrix.md  0010-timing-sample-clock.md  0011-optimize-device-host-adapts.md  0012-denormals-no-hardware-ftz.md  0013-flash-write-audio-placement.md  0014-model-tier-workflow.md  0015-spending-cpu-headroom.md  0016-master-output-soft-clip.md  0017-orchestrator-worker-methodology.md  0018-shared-free-running-lfo.md  0018-usb-c-device-midi-first.md  0019-note-generators-engine-side.md  0020-sub-osc-stays-saw.md  0021-master-output-staging-and-limiter.md  0022-dirty-rect-present-seam.md  0023-rotated-panel-band-present.md  0024-sd-recording.md  0025-side-buttons-control-codec-volume.md  0026-juno106-factory-bank-and-fidelity.md  0027-json-bank-format-and-6-voice.md  README.md
specs/notes/: juno106-hpf-analysis.md  juno106-tape-format.md  naming.md  pax-rendering-perf.md
specs/stages/: README.md  side-volume-amp-ui.md  side-volume-buttons.md  stage-0.5-profiling.md  stage-0.5-results.md  stage-1-one-voice-mvp.md  stage-10-radio.md  stage-11-sd-recording.md  stage-12-output-path-audit.md  stage-13-juno106-factory-bank.md  stage-14-juno106-cleanroom-character.md  stage-2-param-model-ui.md  stage-3-modulation-full-juno.md  stage-3c-iii-osc-waveform-pwm.md  stage-3d-ii-results.md  stage-4-timing-arp-seq-fx.md  stage-5-midi-io.md  stage-6-display-foundation.md  stage-7-keyboard.md  stage-8-efficiency-ui.md  stage-9-rhythm-groovebox.md
tests/host/: CMakeLists.txt  main.cpp  runner.h  test_alloc.cpp  test_alloc_unison_mono.cpp  test_arp.cpp  test_arp_clock.cpp  test_audio_volume.cpp  test_bank_json.cpp  test_clock.cpp  test_command_queue.cpp  test_dcblock.cpp  test_juno106_hpf.cpp  test_limiter.cpp  test_midi_parse.cpp  test_mod_matrix.cpp  test_mod_sources.cpp  test_neiro_bank.cpp  test_note_cap.cpp  test_osc.cpp  test_osc_waveform.cpp  test_param_store.cpp  test_params.cpp  test_preset.cpp  test_record_ring.cpp  test_saturate.cpp  test_scheduler.cpp  test_sustain.cpp  test_ui_focus.cpp  test_ui_presets.cpp  test_user_bank.cpp  test_voice.cpp  test_wav_recorder.cpp
tools/: apply-upstream-patches.sh  publish-app-repository.sh  sniff-console.py  tap2wav.py
ui/: ui.c  ui.cpp  ui.h  ui_dirty.cpp  ui_dirty.h  ui_focus.cpp  ui_focus.h  ui_icons.cpp  ui_icons.h  ui_overlay.cpp  ui_overlay.h  ui_page_table.cpp  ui_page_table.h  ui_presets.cpp  ui_presets.h  ui_presets_state.cpp  ui_presets_state.h
upstream-patches/: README.md
upstream-patches/badge-bsp/: 0001-tanmatsu-audio-philips-i2s-framing.patch  0002-tanmatsu-default-codec-volume.patch
upstream-patches/pax-graphics/: 0001-macos-bsd-host-portable-includes.patch
